--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" role="document">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -12,12 +10,11 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
-
     <title>Frontend Mentor | Order summary card</title>
   </head>
   <body>
     <main>
-      <div class="card" role="article">
+      <section class="card">
         <div class="box">
           <div class="img-fluid">
             <img
@@ -57,14 +54,13 @@
             <a href="#" class="btn-cancel">Cancel Order</a>
           </div>
         </div>
-
-        <div class="attribution">
-          Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-            >Frontend Mentor</a
-          >. Coded by <a href="#">Abegunde Timilehin</a>.
-        </div>
-      </div>
+      </section>
     </main>
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Abegunde Timilehin</a>.
+    </footer>
   </body>
 </html>
